# wlc

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/protocol/: packet.hpp  parser.hpp  serializer.hpp
src/: main.cpp
src/app/: wlc.cpp
src/protocol/: packet.cpp  pareser.cpp  parser.cpp  serializer.cpp
src/wlc/: wlc.cpp  wlc.hpp
tests/protocol_test/: test_protocol.cpp
